<resources>
    <string name="app_name">Dahar-App</string>
    <string name="halo">hello!</string>
    <string name="logo">Logo</string>
    <string name="some_quote">Discover street foods near you</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="donthave">Dont have an account?</string>
    <string name="already">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="login_here">Login here</string>
    <string name="what_to_eat">What will you eat?</string>
    <string name="search">Search</string>
    <string name="nearest">Nearest place</string>
    <string name="minimum_password">Password must be 6 characters or longer</string>
    <string name="auth_failed">Failed to login</string>
    <string name="tab_home">Home</string>
    <string name="home">home</string>
    <string name="tab_search">Search</string>
    <string name="tab_setting">Setting</string>
    <string name="menu">Foods Menu</string>
    <string name="title_activity_places_maps">Maps</string>
    <string name="place_location">Location place</string>
</resources>
