<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_login"
android:layout_margin="0dp"
android:padding="0dp"
tools:context=".LoginActivity">

<ImageView
    android:contentDescription="@string/logo"
    android:id="@+id/logo"
    android:layout_marginTop="60dp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/logo"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:scaleType="fitCenter"/>

<TextView
    android:id="@+id/halo"
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/logo"
    android:layout_centerHorizontal="true"
    android:textColor="@android:color/white"
    android:textSize="@dimen/h1"
    android:text="@string/halo"/>

<TextView
    android:layout_marginTop="@dimen/spacing_vertical"
    android:id="@+id/some_quote"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/halo"
    android:layout_centerHorizontal="true"
    android:textColor="@android:color/white"
    android:textSize="@dimen/h5"
    android:textAlignment="center"
    android:text="@string/some_quote"/>

<EditText
    android:inputType="textEmailAddress"
    android:layout_marginTop="24dp"
    android:layout_marginLeft="@dimen/login_margin_horizontal"
    android:layout_marginRight="@dimen/login_margin_horizontal"
    android:id="@+id/email"
    android:layout_below="@id/some_quote"
    android:background="@drawable/edit_text_1"
    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
    android:drawableStart="@drawable/ic_person_outline_black_24dp"
    android:drawablePadding="8dp"
    android:padding="12dp"
    android:hint="@string/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


<EditText
    android:layout_marginTop="@dimen/spacing_vertical"
    android:inputType="textPassword"
    android:layout_marginLeft="@dimen/login_margin_horizontal"
    android:layout_marginRight="@dimen/login_margin_horizontal"
    android:id="@+id/password"
    android:layout_below="@id/email"
    android:background="@drawable/edit_text_1"
    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
    android:drawablePadding="8dp"
    android:padding="12dp"
    android:hint="@string/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


<EditText
    android:layout_marginTop="@dimen/spacing_vertical"
    android:inputType="textPassword"
    android:layout_marginLeft="@dimen/login_margin_horizontal"
    android:layout_marginRight="@dimen/login_margin_horizontal"
    android:id="@+id/password_confirmation"
    android:layout_below="@id/password"
    android:background="@drawable/edit_text_1"
    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
    android:drawablePadding="8dp"
    android:padding="12dp"
    android:hint="@string/password_confirmation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/dont_have"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_vertical"
        android:text="@string/already"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h5" />

<TextView
    android:id="@+id/login_here"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/dont_have"
    android:layout_centerHorizontal="true"
    android:textColor="@android:color/white"
    android:textSize="@dimen/h5"
    android:textAlignment="center"
    android:textStyle="bold"
    android:text="@string/login_here"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:padding="18dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h5" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>