<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".LoginActivity">

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/logo"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h1"
        android:text="@string/halo"/>

    <TextView
        android:layout_marginTop="@dimen/spacing_vertical"
        android:id="@+id/some_quote"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/halo"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h5"
        android:textAlignment="center"
        android:text="@string/some_quote"/>

    <EditText
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="@dimen/login_margin_horizontal"
        android:layout_marginRight="@dimen/login_margin_horizontal"
        android:id="@+id/email"
        android:layout_below="@id/some_quote"
        android:background="@drawable/edit_text_1"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_marginTop="@dimen/spacing_vertical"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/login_margin_horizontal"
        android:layout_marginRight="@dimen/login_margin_horizontal"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:background="@drawable/edit_text_1"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="@dimen/spacing_vertical"
        android:id="@+id/dont_have"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h5"
        android:textAlignment="center"
        android:text="@string/donthave"/>

    <TextView
        android:id="@+id/create_acc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dont_have"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h5"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/create_account"/>

    <Button
        android:id="@+id/login_button"
        android:padding="18dp"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h5"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>